# dooray-mcp

./: .env.example  .gitignore  GUIDE.md  README.md  install.bat  pyproject.toml  run_server.py  setup.py
bot/: ai_handler.py  app.py  commands.py  run_bot.bat
src/: audit.py  client.py  projects.py  server.py  validators.py
src/services/: __init__.py  _base.py  calendar.py  common.py  contacts.py  drive.py  messenger.py  posts_extra.py  project_admin.py  reservation.py  wiki.py
tests/: test_connection.py  test_services.py  test_validators.py
