[project]
name = "dooray-mcp"
version = "2.1.0"
description = "Dooray MCP Server - 두레이 태스크 관리를 위한 Model Context Protocol 서버"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
dooray-mcp = "src.server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
